--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </header>
             
             <section>
-                <textarea id="inputCelcius" placeholder="celcius" style="font-size: smaller; text-align: center;" oninput="temperatureConverter(this.value)" onchange="temperatureConverter(this.value)"></textarea>
+                <textarea id="inputCelcius" placeholder="celcius" style="font-size: smaller; text-align: center;"></textarea>
                 <section>
-                    <button id="konversi">Konversi</button>
+                    <button onclick="temperatureConverter()" id="konversi">Konversi</button>
                     <button>Reset</button>
                     <button>Reverse</button>
                 </section>
